# learning-notes

./: .gitignore  CLAUDE.md  ClaudeCode-Obsidian-KnowledgeBase-Prompt.md.md  README.md  Study-plan.md  _format_md.py
.claude/: settings.json
0raw/: 2.3K 小文件拿到 4 万星，它让你的 Claude Code 乖乖听话.md  21.4K 星封神！Planning with Files：让 AI 像顶级工程师一样稳扎稳打做项目.md  55.5k Star！AI代码知识图谱神器开源，让Claude Code一次看懂全仓库.md  AI 代码审查的工程化实践：阿里 Open Code Review 开源.md  AI 接管 Kubernetes 运维——Kubernetes MCP Server.md  AIOps实战：手搓K8s智能运维工具链.md  AI别再输出Markdown了，让它直接吐HTML — effective-html 工具实测.md  Anthropic 宣布用 HTML ，这个项目也火了 。.md  Claude Code 创始人在红杉大会上的 7 个重要判断。.md  Claude Code 并行开发完全指南：Subagents + Agent Teams + Git Worktree + 工作流编排实战.md  Claude Code+Obsidian ：让 AI 当你的知识管家.md  Claude Code实现CICD自动化发布流程详细指南.md  CodeGraph：给 Claude Code 先画一张代码地图，工具调用直接砍掉 92%.md  Codex 一键省 Token 大法，亲测有效.md  Docker 安全配置详解：RockyLinux 9.7 开发容器.md  GitOps 落地实践：ArgoCD + Kustomize 实现声明式基础设施管理.md  Harness 实战：从零搭建最小可用的 Harness 系统.md  Helm部署RabbitMQ 高可用集群(HA).md  Hermes Agent全解析：与OpenClaw对比及飞书接入指南 - 飞书官网.md  Istio Sidecar vs Ambient：不是“谁先进”，而是“谁更省、谁更稳、谁更适合你现在”.md  K8S 容器设计模式 - Adapter 模式.md  K8S 容器设计模式 - Ambassador 模式.md  K8S 容器设计模式 - Init Container 模式.md  K8S 容器设计模式(1)-Sidecar 模式.md  K8S实战教程 如何使用 External Secrets Operator 管理 Kubernetes密钥.md  K8S工具推荐，Kargo：下一代 GitOps 持续交付工具.md  K8S工具推荐：使用Argo Rollouts实现GitOps自动化测试与回滚.md  K8S工具推荐：告别复杂认证！Kubernetes登录神器kubelogin指南.md  K8s 1.37 升级生死线：8月26日这三个"坑"会让你的集群直接挂掉.md  K8s CGroup v2深度解析：资源隔离原理、迁移实战与生产避坑指南.md  K8s Finalizer：那个让资源"删不掉"的隐形守护者.md  K8s PodDisruptionBudget 实战：优雅滚动更新背后的守护神.md  K8s VPA 垂直自动扩缩容：你真的会用吗？.md  K8s 全面巡检脚本：一键生成炫酷 HTML 健康报告.md  K8s 集群的"后悔药"，你家有吗？Kubernetes 备份与灾备实战全指南.md  K8s审计日志深度实践——从运维利器到合规基石.md  K8s集群费用暴涨？这套成本优化方案砍掉60%云账单.md  KEDA vs HPA 2026终极对比：v1.36原生缩零后该选谁？.md  Kubernetes API Server 深度剖析：请求链路、认证授权与生产调优.md  Kubernetes Gateway API 入门： Ingress 的下一代方案.md  (+70 more)
2021-job-hunting-notes/: 20210822-周总结.md  20210823日总结.md  20210824日总结.md  20210826每日总结.md  20210827 每日总结.md  20210829 每日总结.md  20210830-每日总结.md  20210907每日总结.md  LeetCode题解——数组-二分-滑窗-双指针.md  LeetCode题解——无分类篇.md  LeetCode题解——链表.md  字节面经总结.md  软件测开知识.md
2021秋招计算机学习/: 20210825每日总结.md  20210828每日总结.md  20210831每日总结.md  20210901每日总结.md  20210912每日总结.md  Carl答疑.md  LeetCode题解——BFS DFS.md  LeetCode题解——哈希表.md  LeetCode题解——栈与队列.md  排序算法.md  随笔.md
AI/: AI做PPT-ppt-master.md  Confluence-Wiki-RAG知识库增强检索系统.md  Copilot CLI.md  Graphify-软件工程知识图谱工具.md  HarnessKit.md  Kubernetes-MCP-Server-Dify智能运维.md  RAG-PDF解析难点与主流方案.md  index.md  obsidian-claude.md  提示词.md  提示词集合.md
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/: .uvignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  stop-windows.bat
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/aiops-docs/: service_unavailable.md
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/: __init__.py  main.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/agent/: __init__.py  mcp_client.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/agent/aiops/: __init__.py  executor.py  planner.py  state.py  utils.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/api/: __init__.py  file.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/core/: __init__.py  milvus_client.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/models/: aiops.py  request.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/services/: vector_store_manager.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/tools/: __init__.py  knowledge_tool.py  time_tool.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/app/utils/: logger.py
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/mcp_servers/: README.md
AI/RAG/CloudOps-Agent-项目/0-源码/super_biz_agent_py-release-2026-03-21/static/: app.js  index.html  styles.css
Aliyun/: ACP考试.md  ACP认证.md  index.md
Azure/: 0_Azure-VM-VMSS.md  10_Azure-devops-agent-pool-management.md  11_Azure-Policy.md  1_Azure-Linux-VM-troubheshooting.md  2_AKS-basics.md  3_AKS-workload-identity.md  4_AKS-SecretProviderClass-KeyVault.md  5_Azure-Storage.md  6_Azure-Networking.md  7_ACR-ACI.md  8_Azure-devops-basics.md  9_Azure-devops-self-host-agents.md  ACI-Jfrog-artifactory.md  AKS basic.md  AKS-SecretProviderClass-KeuVault.md  AKS-workload-identity.md  AKS.md  Azure Devops service connection.md  Azure Devops.md  Azure Devops基础.md  Azure Storage.md  Azure-devops-basics.md  Azure-devops-self-host-agents.md  IO-monitor.md  Jfrog-artifactory-Azure.md  Jfrog-artifactory.md  Kusto Query.md  (+9 more)
(+2004 files in other folders)
